# hachi-machi

./: .gitignore  404.html  README.md  TODO.md  blog.html  docs.html  environment.yml  index.html  pyproject.toml  sitemap.xml
assets/css/: styles.00d93d28.css  styles.073bcfc5.css  styles.0ad4af99.css  styles.31b52a26.css  styles.3a711831.css  styles.3fa9db46.css  styles.4d00221b.css  styles.5e929e71.css  styles.7222e7a6.css  styles.934ce487.css  styles.c26d2644.css  styles.d4faad8f.css
assets/js/: 160fcf47.3fa273c0.js  160fcf47.eb31314b.js  160fcf47.edfe1b09.js  160fcf47.fb619db1.js  17896441.db767b0d.js  19e76883.0841edbd.js  19e76883.164b1984.js  19e76883.862084c1.js  19e76883.d87f1a36.js  1df93b7f.126d7a6b.js  1df93b7f.1fcb280a.js  1df93b7f.4a58b9eb.js  1df93b7f.76d2bf9f.js  1df93b7f.7b4b8832.js  1df93b7f.c03c78b4.js  1df93b7f.c52b2feb.js  1df93b7f.dadbddc3.js  1ee88a06.13b9bc02.js  1ee88a06.210d94ab.js  1ee88a06.7f25346f.js  1ee88a06.bf8fb9c6.js  1ee88a06.d8974040.js  1ee88a06.f93b33a4.js  283e539f.627ff668.js  283e539f.b32619d2.js  283e539f.d2367e8a.js  283e539f.e63a1f93.js  30bab453.3414e655.js  348ac280.3d4b353c.js  348ac280.acc21235.js  3693.fba901b7.js  36994c47.affa66d6.js  36de4ded.0eff4c5a.js  36de4ded.23207897.js  36de4ded.54bfcc41.js  36de4ded.d13bd396.js  36de4ded.ea230f3e.js  3b8c55ea.1389947e.js  3b8c55ea.246843f6.js  3b8c55ea.309a51d8.js  (+127 more)
docs/: commands.html  installation.html
docs/commands/: devices.html  exec.html  fork.html  format.html  gen.html  info.html  operations.html  rec.html  run.html  train.html
docs/tutorials/: basics.html  config-files.html  data-augmentation.html  data-format.html  recording.html  the-model.html
src/: main.py
src/hachi_machi/: __init__.py  augment.py  console.py  contexts.py  data.py  io.py  (+8 more)
web/: docs.py  docusaurus.config.ts  package-lock.json  package.json
(+108 files in other folders)
