[project]
name = "hachi-machi"
authors = [
	{ name = 'Felipe Tovar-Henao', email = 'felipe.tovar.henao@gmail.com' },
]
description = "High-level and Controllable Human Interface for Machine Improvisation."
readme = "README.md"
version = "0.1.0"
keywords = [
	'music',
	'machine improvisation',
	'artificial intelligence',
	'symbolic music',
]
requires-python = ">=3.10"
dependencies = ["torch", "click", "python-osc", "mido", "toml"]

[project.scripts]
machi = "hachi_machi.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
