[project]
name = "hachi-machi"
authors = [
	{ name = 'Felipe Tovar-Henao', email = 'felipe.tovar.henao@gmail.com' },
]
description = "High-level and Controllable Human Interface for Machine Improvisation."
readme = "README.md"
version = "0.1.0"
keywords = [
	'music',
	'machine improvisation',
	'artificial intelligence',
	'symbolic music',
]
requires-python = ">=3.10"
dependencies = ["torch", "click", "python-osc", "mido", "toml"]

[project.scripts]
hxmx = "hachi_machi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
